# finance-core

./: .gitignore  README.MD  README.md  TODOS.txt  main.py  pyproject.toml
backend/: .env.example
backend/src/: main.py
backend/src/db/: seed_init.py
backend/src/engine/: engine_graph.py  prompts.py
backend/src/engine/agents/: answer_agent.py  chat_manager_agent.py  routing_agent.py  sql_agent.py  synthesis_agent.py
backend/src/engine/tools/: sql_tools.py
backend/src/models/: finance_models.py
backend/src/rag/: retriever.py  search_finance.py
backend/src/utils/: parse_history.py
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts  types.ts
frontend/src/actions/: access-action.ts  chat-action.ts  clear-action.ts  logout-action.ts
frontend/src/app/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/chat/[id]/: page.tsx
frontend/src/components/: AccessForm.tsx  CustomAlert.tsx
frontend/src/components/Chat/: ChatContainer.tsx  ChatLayout.tsx  InteractionMessage.tsx  MarkdownRenderer.tsx  Messages.tsx  SendInput.tsx  WaitingMessage.tsx  WelcomeMessage.tsx
frontend/src/components/Menu/: Chats.tsx  ClearButton.tsx  LogoutButton.tsx  MenuContainer.tsx  MobileMenu.tsx  Overlay.tsx  Sidebar.tsx  index.tsx
frontend/src/contexts/: MenuContext.tsx  MessageContext.tsx
frontend/src/lib/: queries.ts
frontend/src/utils/: fake-chat.ts  log-color.ts
src/: main.py  types.ts
src/actions/: chat-action.ts
src/app/: layout.tsx
src/components/Chat/: SendInput.tsx
src/components/Menu/: Sidebar.tsx
src/config/: langfuse.py  secrets.py  tracing.py
src/db/: database.py  init.py  seed.py  seed_init.py  seeds.py
src/engine/: agents.py  engine_graph.py  graph.py  prompts.py
src/engine/agents/: answer_agent.py  greeting_agent.py  retrieval_agent.py  routing_agent.py  sql_agent.py  synthesis_agent.py
src/engine/tools/: search_finance.py  sql_tools.py
src/models/: finance_models.py
src/rag/: rag_sql.py  vector.py
src/utils/: check_key.py  llm.py  retriever.py
(+1 files in other folders)
